# napari-manual-split-and-merge-labels

./: README.md  setup.cfg  tox.ini
docs/data/: blobs_labels.tif
napari_manual_split_and_merge_labels/: __init__.py  _function.py  _labels2points.py
napari_manual_split_and_merge_labels/_tests/: test_function.py
